--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
     <div class="caixa-principal">
         <h1>LUIZ HENRIQUE</h1>
-        <h2 id="sub-title">link:https://youtu.be/2UBM3b3DVM8?si=vlWjOPhLdiCxE8lW</h2>
+        <div id="sub-title">
+            <p>Desenvolvedor Web e Designer</p>
+            <p>links: <a href=https://youtu.be/2UBM3b3DVM8?si=vlWjOPhLdiCxE8lW target="_blank">GitHub</a> e <a href=https://youtu.be/2UBM3b3DVM8?si=vlWjOPhLdiCxE8lW target="_blank">LinkedIn</a>.</p>
         <div class="caixa-perguntas"></div>
         <div class="caixa-alternativas"></div>
         <div class="caixa-resultado">
