--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 <body>
     <div class="caixa-principal">
         <h1>LUIZ HENRIQUE</h1>
-        <div id="sub-title">
-            <p>Desenvolvedor Web e Designer</p>
-            <p>links: <a href=https://youtu.be/2UBM3b3DVM8?si=vlWjOPhLdiCxE8lW target="_blank">GitHub</a> e <a href=https://youtu.be/2UBM3b3DVM8?si=vlWjOPhLdiCxE8lW target="_blank">LinkedIn</a>.</p>
+        <h2>Links:https://youtu.be/2UBM3b3DVM8?si=vlWjOPhLdiCxE8lW  </h2>
         <div class="caixa-perguntas"></div>
         <div class="caixa-alternativas"></div>
         <div class="caixa-resultado">
