--- a/index.html
+++ b/index.html
@@ -1,21 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Missão AI</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="caixa-principal">
-        <h1>LUIZ HENRIQUE</h1>
-        <h2>Links:https://youtu.be/2UBM3b3DVM8?si=vlWjOPhLdiCxE8lW  </h2>
-        <div class="caixa-perguntas"></div>
-        <div class="caixa-alternativas"></div>
-        <div class="caixa-resultado">
-            <p class="texto-resultado"></p>
-        </div>
+    <div class="teste">
+
+        <h1 class="teste2">Título</h1>
+
     </div>
+    
 </body>
 <script src="main.js"></script>
 </html>
